--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@
 .event__box .event__box-title{overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 1; -webkit-box-orient: vertical; font-size: 18px; font-weight: bold; line-height: 27px; letter-spacing: -0.45px; text-align: center;  color: #1b1e23;  margin: 0 0 4px;}
 .event__box .event__box-info{overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-size: 18px; line-height: 29px; letter-spacing: -0.5px; text-align: center; color: #3d444f;}
 
-.event__block--gray {background-color: #f9fafb; padding: 48px 0 80px 0;} 
+.event__block--gray {background-color: #f9fafb; padding: 48px 0 80px 0; margin: 48px 0 80px 0;} 
 .brand {}
+.brand .brand__image{}
 .brand .brand__title{margin: 0 auto 24px; font-size: 24px; font-weight: bold; line-height: 36px; letter-spacing: -0.6px; text-align: center; color: #1b1e23;}
+.brand__item-title { overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 1; -webkit-box-orient: vertical;  margin: 8px 0 0; font-size: 18px; font-weight: bold; line-height: 27px; letter-spacing: -0.45px;  text-align: center;  color: #1b1e23;}
