--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -1,84 +1,163 @@
 /* reset */
 
 @font-face {
-    font-family: 'Noto Sans CJK KR';
-    font-style: normal;
-    font-weight: 400;
-    src: url(../assets/fonts/NotoSansKR-Regular.woff2) format('woff2'),
-        url(../assets/fonts/NotoSansKR-Regular.woff) format('woff'),
-        url(../assets/fonts/NotoSansKR-Regular.otf) format('opentype');
+  font-family: "Noto Sans CJK KR";
+  font-style: normal;
+  font-weight: 400;
+  src: url(../assets/fonts/NotoSansKR-Regular.woff2) format("woff2"),
+    url(../assets/fonts/NotoSansKR-Regular.woff) format("woff"),
+    url(../assets/fonts/NotoSansKR-Regular.otf) format("opentype");
 }
 @font-face {
-    font-family: 'Noto Sans CJK KR';
-    font-style: normal;
-    font-weight: 600;
-    src: url(../assets/fonts/NotoSansKR-Bold.woff2) format('woff2'),
-        url(../assets/fonts/NotoSansKR-Bold.woff) format('woff'),
-        url(../assets/fonts/NotoSansKR-Bold.otf) format('opentype');
+  font-family: "Noto Sans CJK KR";
+  font-style: normal;
+  font-weight: 600;
+  src: url(../assets/fonts/NotoSansKR-Bold.woff2) format("woff2"),
+    url(../assets/fonts/NotoSansKR-Bold.woff) format("woff"),
+    url(../assets/fonts/NotoSansKR-Bold.otf) format("opentype");
 }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-    text-decoration: none;	
-	box-sizing: border-box;
-	
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
-	font-size:13px;
-	letter-spacing: -0.05em;	
-	font-family:'Noto Sans CJK KR', '본고딕', 'sans-serif', sans-serif; 
-	font-weight:400; 	
-	color:#1b1e23; 
-	
+  line-height: 1;
+  font-size: 13px;
+  letter-spacing: -0.05em;
+  font-family: "Noto Sans CJK KR", "본고딕", "sans-serif", sans-serif;
+  font-weight: 400;
+  color: #1b1e23;
+  overflow-x: hidden;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 button {
-	margin: 0;
-	padding: 0;
-	border: none;
-	background: none;
-	cursor: pointer;
-	outline: none;
-	appearance: none;
-	-webkit-appearance: none;
-	forced-color-adjust: none;
-  }
-  
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+  outline: none;
+  appearance: none;
+  -webkit-appearance: none;
+  forced-color-adjust: none;
+}
