--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@
 }
 
 .pop_special_tmp {
-  overflow: scroll;
+  overflow-y: scroll;
   height: calc(100vh - 69px);
 }
 
@@ -758,7 +758,7 @@
   width: 414px;
   margin: auto;
 }
-.event__tabs ul::after {
+.event__tab-button--active::after {
   content: "";
   position: absolute;
   left: 0;
@@ -782,6 +782,8 @@
   line-height: 52px;
   letter-spacing: -0.45px;
   color: #abb2be;
+}
+.event__tabs .event__tab-button button {
 }
 .event__tabs .event__tab-button.event__tab-button--active button {
   font-weight: 700;
@@ -1643,7 +1645,189 @@
 .product-set__small-img .product-set-image img {
   width: 100%;
 }
-{#3D444F}
+.product-set__btn {
+  color: #3d444f;
+  position: relative;
+  padding-left: 15px;
+}
+.product-set__btn::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background-image: url(../assets/images/set.png);
+}
+.product-set__info {
+  padding: 20px 0;
+}
+.product-set__spec {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid #eef0f2;
+  padding: 20px 0;
+}
+.product-set__price {
+}
+.product-set__price .product-set__price-top {
+  display: flex;
+}
+.product-set__price .product-set__price-top strong {
+  font-size: 13px;
+  color: #1b1e23;
+  font-weight: bold;
+}
+.product-set__price .product-set__price-top span {
+  font-size: 14px;
+  color: #abb2be;
+  margin-left: 4px;
+}
+.product-set__price .product-set__price-bottom {
+  display: flex;
+  margin-top: 4px;
+}
+.product-set__price .product-set__price-bottom strong {
+  font-size: 18px;
+  font-weight: bold;
+}
+.product-set__price .product-set__price-bottom strong.color-red {
+  color: #ea2829;
+  margin-left: 4px;
+}
+
+.btn-cart {
+  position: relative;
+  background-color: #000;
+  color: #fff;
+  padding: 6px 14px 6px 32px;
+  border-radius: 4px;
+}
+.btn-cart::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  display: block;
+  width: 15px;
+  height: 15px;
+  background: url(../assets/images/icon_product_cart_w.svg) no-repeat;
+  background-size: contain;
+}
+
+.layer-cart__bottom {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+.layer-cart__bottom .count {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 48px;
+}
+.layer-cart__bottom .count button {
+  display: block;
+  width: 20px;
+  font-size: 20px;
+}
+.layer-cart__bottom .count button.add {
+  position: relative;
+  top: 2px;
+}
+.layer-cart__bottom .count .num {
+  width: 48px;
+  text-align: center;
+}
+.layer-cart .btn-close-layer {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+.layer-cart .btn-close-layer .layer-cart__title {
+  font-size: 15px;
+}
+.layer-cart .btn-close-layer button {
+  width: 12px;
+  height: 12px;
+  padding: 10px;
+  position: relative;
+}
+.layer-cart .btn-close-layer button::after,
+.layer-cart .btn-close-layer button::before {
+  content: "";
+  position: absolute;
+  width: 13px;
+  height: 1px;
+  left: 0;
+  background-color: #abb2be;
+  transform: rotate(-45deg);
+}
+.layer-cart .btn-close-layer button::before {
+  transform: rotate(45deg);
+}
+.add-cart {
+  font-size: 16px;
+  color: #fff;
+  padding: 12px 38px;
+  background-color: #1b1e23;
+  border-radius: 4px;
+}
+.layer-cart__discount {
+  display: flex;
+}
+.layer-cart__discount .dis {
+  font-size: 24px;
+  font-style: italic;
+  color: #ea2829;
+}
+.layer-cart__discount .info {
+  font-size: 14px;
+  color: #1b1e23;
+  margin: 0 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.layer-cart__discount ~ .list_tmp_bnr_event {
+  padding-top: 20px;
+}
+.add-alert {
+  position: fixed;
+  top: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(92, 102, 119, 0.9);
+  color: #fff;
+  font-size: 13px;
+  padding: 8px 24px;
+  border-radius: 18px;
+  z-index: 9999;
+  display: none;
+}
+.event__swiper .swiper-pagination-bullet {
+  margin: 0 !important;
+  width: 50%;
+  border-radius: 0;
+}
+.layer-cart .type_special_tmp {
+  bottom: inherit;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 333px;
+  height: 70vh;
+  max-height: 600px;
+  padding: 0 14px;
+  border-radius: 20px;
+}
+.pop_special_tmp {
+  height: calc(100% - 143px);
+}
+
 @media (max-width: 1120px) {
   .location {
     left: 20px;
@@ -1678,11 +1862,6 @@
   }
 }
 @media (min-width: 768px) {
-  .event__swiper .swiper-pagination-bullet {
-    margin: 0 !important;
-    width: 50%;
-    border-radius: 0;
-  }
 }
 @media (max-width: 768px) {
   .location {
@@ -2099,5 +2278,14 @@
   }
   .event__contents .event__product {
     flex-wrap: nowrap;
+  }
+  .layer-cart .btn-close-layer {
+    padding: 20px;
+  }
+  .layer-cart__discount {
+    padding: 0 20px;
+  }
+  .layer-cart__bottom {
+    padding: 20px;
   }
 }
